Fix padding of bottom description on tablets

--- a/sass/blocks/gallery-item.scss
+++ b/sass/blocks/gallery-item.scss
@@ -126,23 +126,23 @@
 
   .gallery-item__pict {
     width: 300px;
-    height: 300px;
+    min-height: 300px;
   }
 
   .gallery-item__pict--panoram {
     width: 100%;
-    height: 510px;
+    min-height: 510px;
   }
 
   .gallery-item__desc {
     width: 300px;
-    height: 156px;
+    min-height: 156px;
     padding: 23px 26px 27px;
     &--panoram {
       flex-direction: initial;
       flex-wrap: wrap;
       width: 620px;
-      height: auto;
+      min-height: auto;
     }
   }
 
@@ -168,8 +168,8 @@
   }
 
   .gallery-item__like::before {
-    bottom: 25px;
-    right: 32px;
+    bottom: 0px;
+    right: 0px;
     left: auto;
   }
 
@@ -194,7 +194,7 @@
   }
 
   .gallery-item__pict{
-    height: 400px;
+    min-height: 400px;
   }
 
   .gallery-item__desc {
